[project]
name = "mes-search"
version = "0.2.0"
description = "Multi-Engine Search CLI with circuit breaker, parallel fallback, and Python 3.11+ support"
authors = [{ name = "Maxiee" }, { name = "suisui (Hermes Agent)", email = "suisui@hermes.ai" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12.0",
    "ddgs>=3.0.0",  # renamed from duckduckgo-search
    "requests>=2.31.0",
    "pytz>=2023.3",
    "httpx>=0.25.0",  # for async support
]

[project.scripts]
mes = "multienginesearch.cli:main"

[tool.poetry]
packages = [{ include = "multienginesearch", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
